@@ -50,6 +50,7 @@ public class ReleaseEndpoint extends AbstractProjectEndpoint {
 		addReadHandler();
 		addUpdateHandler();
 		addNodeMigrationHandler();
+		addMicronodeMigrationHandler();
 	}
 
 	private void addNodeMigrationHandler() {
@@ -63,7 +64,23 @@ public class ReleaseEndpoint extends AbstractProjectEndpoint {
 		endpoint.handler(rc -> {
 			InternalActionContext ac = new InternalRoutingActionContextImpl(rc);
 			String releaseUuid = rc.request().getParam("releaseUuid");
-			crudHandler.handleMigrateRemaining(ac, releaseUuid);
+			crudHandler.handleMigrateRemainingNodes(ac, releaseUuid);
+		});
+	}
+	
+	
+	private void addMicronodeMigrationHandler() {
+		Endpoint endpoint = createEndpoint();
+		endpoint.path("/:releaseUuid/migrateMicroschemas");
+		endpoint.method(GET);
+		endpoint.addUriParameter("releaseUuid", "Uuid of the release", UUIDUtil.randomUUID());
+		endpoint.description("Invoked the micronode migration for not yet migrated micronodes of microschemas that are assigned to the release.");
+		endpoint.exampleResponse(OK, miscExamples.getMessageResponse(), "schema_migration_invoked");
+		endpoint.produces(APPLICATION_JSON);
+		endpoint.handler(rc -> {
+			InternalActionContext ac = new InternalRoutingActionContextImpl(rc);
+			String releaseUuid = rc.request().getParam("releaseUuid");
+			crudHandler.handleMigrateRemainingMicronodes(ac, releaseUuid);
 		});
 	}
 
