@@ -4,6 +4,8 @@
 
 == 0.9.9 (PENDING)
 
+icon:plus[] Core: Added `/api/v1/:projectName/releases/:releaseUuid/migrateMicroschemas` endpoint which can be used to resume previously unfinished micronode migrations.
+
 icon:check[] Core: Fixed NPE that was thrown when loading releases on older systems.
 
 icon:check[] Core: An upgrade error has been fixed which was caused by an invalid microschema JSON format error.
